fix: make focus outline easily visible

--- a/packages/dmn-js-decision-table/assets/css/dmn-js-decision-table.css
+++ b/packages/dmn-js-decision-table/assets/css/dmn-js-decision-table.css
@@ -380,6 +380,7 @@
   border-radius: 50%;
   color: var(--add-column-icon-color);
   background-color: var(--add-column-icon-background-color);
+  outline-offset: 4px;
 }
 
 .dmn-decision-table-container .actionable:hover .action-icon {
